<resources>
    <string name="app_name">MemoWithTimeStamp</string>
    <string name="nowDateSampleText">2024.01.03 (水)</string>
    <string name="nowTimeSampleText">21:50:00</string>

    <string name="gps_enable">位置</string>
    <string name="map_view">現在位置を地図アプリで表示</string>
    <string name="latitudeTypeSampleText">緯度: </string>
    <string name="latitudeSampleText">0.00000</string>
    <string name="longitudeTypeSampleText">経度: </string>
    <string name="longitudeSampleText">0.00000</string>

    <string name="btn_inserttimestamp">日時を挿入</string>
    <string name="btn_insertpos">位置情報を挿入</string>
    <string name="btn_save">メモを保存</string>
    <string name="btn_new_export">名前を付けて保存&#8230;</string>
    <string name="btn_load_file">ファイルから読み込み&#8230;</string>
    <string name="btn_select_export_file">ファイル選択&#8230;</string>
    <string name="btn_overwrite_export">上書き保存</string>

    <string name="location_access_not_permitted">位置情報の利用が許可されていません</string>
    <string name="file_load_finished">ファイルから読み込みました。</string>
    <string name="memo_export_finished">メモのエクスポートが完了しました。</string>
    <string name="file_access_not_allowed">ファイルの読み取り・書き込みが許可されていません。</string>
    <string name="file_autoload_finished">自動保存ファイルから読み込みました。</string>
    <string name="file_autosave_finished">メモを自動保存しました。</string>
    <string name="could_not_autoload">自動保存ファイルからの読み込みができませんでした。</string>
    <string name="could_not_autosave">自動保存ができませんでした。</string>
    <string name="memo_body_placeholder">メモを入力&#8230;</string>

    <string name="default_save_filename">MemoWithLogStamp_memo.txt</string>
    <string name="default_save_filename_prefix">MemoWithLogStamp_memo</string>

    <string name="error_dialog_export_failed_title">エクスポートできませんでした</string>
    <string name="error_dialog_export_failed_message">指定したファイルにエクスポートできませんでした。</string>
    <string name="error_dialog_load_file_failed_title">読み込めませんでした</string>
    <string name="error_dialog_load_file_failed_message">指定したファイルを読み込めませんでした。</string>
</resources>