<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nowDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="#FFFFFF"
        android:text="@string/nowDateSampleText"
        android:textAlignment="center"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/nowTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:background="#FFFFFF"
        android:text="@string/nowTimeSampleText"
        android:textAlignment="center"
        android:textSize="56sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/gpsEnable"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/gps_enable"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/nowLatitudeType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_gravity="center"
            android:text="@string/latitudeTypeSampleText"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/nowLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/latitudeSampleText"
            android:gravity="end"
            android:textSize="20sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/nowLongitudeType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_gravity="center"
            android:text="@string/longitudeTypeSampleText"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/nowLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/longitudeSampleText"
            android:gravity="end"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnViewCurrentPosOnMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/map_view"
        android:textSize="18sp"
        tools:ignore="VisualLintButtonSize" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnInsertTimestamp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gold"
            android:text="@string/btn_inserttimestamp"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnInsertPos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/mediumseagreen"
            android:text="@string/btn_insertpos"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="ButtonStyle,TextContrastCheck,VisualLintButtonSize" />
    </LinearLayout>

    <EditText
        android:id="@+id/memoBody"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:gravity="top|start"
        android:hint="@string/memo_body_placeholder"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="8dp"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNewExport"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/royalblue"
            android:text="@string/btn_new_export"
            android:textColor="#FFF8E1"
            android:textSize="15sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btnOverwriteExport"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:text="@string/btn_overwrite_export"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />
    </LinearLayout>

</LinearLayout>
